# apps/backend/src/routes/sellers.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import * as sellersController from '../controllers/sellers.controller';
+
+const router = Router();
+
+router.get('/', sellersController.list);
+router.get('/:sellerId', sellersController.getById);
+
+export const sellersRoutes = router;
